fixed setting page overflow, site not using CSS resets.

--- a/TrackThat-Front-End/src/Dashboard/Settings.module.css
+++ b/TrackThat-Front-End/src/Dashboard/Settings.module.css
@@ -4,7 +4,7 @@
     gap: 20px;
     padding: 20px;
     color: #fff; 
-    overflow-y: auto; 
+    /* overflow-y: auto;   */
     max-height: 85vh; 
 }
 
@@ -28,10 +28,11 @@
 }
 
 .settings-profile-section {
+    box-sizing: border-box;
     border: 2px solid #462F4C;
     padding: 20px;
     border-radius: 8px;
-    width: 98%;
+    width: 100%;
     margin: auto;
     display: flex;
     flex-direction: column;
